[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/EnemyMaterial.tres" type="Material" id=4]
[ext_resource path="res://characters/enemies/DeathExplosion.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0312

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
death_explosion = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="HurtBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 1 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 30.0

[node name="NavigationRefreshTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="die" from="Stats" to="." method="_on_Stats_die"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
